--- a/estilo/style.css
+++ b/estilo/style.css
@@ -30,6 +30,12 @@ h3 {
     text-shadow: 2px 2px 4px rgba(46, 255, 46, 0.5);
 }
 
+h4 {
+    color: rgb(0, 255, 0); 
+    text-shadow: 2px 2px 4px rgba(0, 85, 38, 0.5);
+    text-align: right;
+}
+
 h1 {
     color: rgb(0, 255, 0); 
     text-shadow: 2px 2px 4px rgba(46, 255, 46, 0.5);
@@ -77,12 +83,36 @@ h1 {
 .RubyLogo,
 .RLogo,
 .SimulaLogo,
-.PrologLogo,
-.PascalLogo,
 .ÉguaLogo {
     height: 50%;
 }
 
-.wwwlogo {
-    height: 70%;
+.wwwlogo,
+.PrologLogo,
+.PascalLogo,
+.HtmlCode,
+.JavaScriptCode,
+.CSSCode,
+.FortranCode,
+.SmalltalkCode,
+.C3Code,
+.CCode,
+.C2Code,
+.PhytonCode,
+.JavaCode,
+.KotlinCode,
+.RubyCode,
+.RCode,
+.EguaCode{
+    height: 55%;
 }
+
+.JavaCode,
+.PHPCode{
+    height: 70%; 
+}
+
+
+
+
+
